[package]
name = "ride"
version = "0.1.0"
edition = "2021"
description = "Rust Interactive Debugger"
license = "GPL-3.0"
repository = "https://github.com/rationalintelligence/ride"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
goblin = "0.9.2"
nix = { version = "0.29.0", features = ["process", "ptrace"] }
